WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49602
Web Inspector: [REGRESSION] editing disabled styles breaks style bodies.
https://bugs.webkit.org/show_bug.cgi?id=49602
Summary
Web Inspector: [REGRESSION] editing disabled styles breaks style bodies.
Pavel Feldman
Reported
2010-11-16 09:34:47 PST
- Open webkit.org - Disable one of the body's style properties - Edit them (white -> red) Things break.
Attachments
[PATCH] Suggested solution
(9.53 KB, patch)
2010-11-17 01:49 PST
,
Alexander Pavlov (apavlov)
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2010-11-17 01:49:57 PST
Created
attachment 74094
[details]
[PATCH] Suggested solution
Alexander Pavlov (apavlov)
Comment 2
2010-11-17 02:50:58 PST
Committed
r72182
: <
http://trac.webkit.org/changeset/72182
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug