2010-11-17  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] editing disabled styles breaks style bodies.
        https://bugs.webkit.org/show_bug.cgi?id=49602

        * inspector/styles-new-API-expected.txt:
        * inspector/styles-new-API.html:
2010-11-17  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] editing disabled styles breaks style bodies.
        https://bugs.webkit.org/show_bug.cgi?id=49602

        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyle::setPropertyText):
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertyTreeElement.prototype.get name):
        (WebInspector.StylePropertyTreeElement.prototype.get priority):
        (WebInspector.StylePropertyTreeElement.prototype.get value):

Canonical link: https://commits.webkit.org/62644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72182 268f45cc-cd09-0410-ab3c-d52691b4dbfc